Sefarad/demo-dashboard/k8s/dreampy-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dreampy-web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        role: dreampy-web
        app: dreampy-web
    spec:
      imagePullSecrets:
      - name: registry.cluster.gsi.dit.upm.es
      containers:
      - name: dreampy
        image: registry.cluster.gsi.dit.upm.es/tfg/tfg-danielsuarez:0.0.2
        imagePullPolicy: Always
        resources:
          limits:
            memory: "512Mi"
            cpu: "100m"
        ports:
          - name: web
            containerPort: 8080
