Sefarad/demo-dashboard/k8s/dreampy-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dreampy-web
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
  selector:
    role: dreampy-web
