Sefarad/demo-dashboard/k8s/dreampy-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dreampy-web
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host:  dreampy.cluster.gsi.dit.upm.es
    http:
      paths:
      - path: /
        backend:
          serviceName: dreampy-web
          servicePort: 8080
